# plugin-factory

./: .gitignore  README.md  config.py  example.py  example1.py  example_main.py  project_structure.md  pyproject.toml  readme_en.md  readme_ru.md
docs/: TODO.md  lifecycle.md  old_plugin_system_architecture.md  plugin_contract.md  plugin_system_architecture.md
example/: example_main.py
example/plugins/: __init__.py  plugin_example.py  plugin_example_1.py  plugin_example_2.py  plugin_example_3.py
pluginFactory/: basePlugin.py  plugin_loader.py  plugin_manager.py
plugins/Example/: plugin_example.py  plugin_example_1.py  plugin_example_2.py  plugin_example_3.py
src/: IPlugin.py  IPluginLoader.py  __init__.py  basePlugin.py  plugin_loader.py  plugin_manager.py
src/Implementations/: PluginLoader.py  __init__.py  finder_local_plugin.py  local_plugin_finder.py  local_storage.py  plugin_manager.py  plugin_validator.py
src/Interfaces/: IFinderPlugin.py  IPlugin.py  IPluginLoader.py  IPluginStorage.py  IPluginValidator.py  __init__.py
src/data/: __init__.py  plugin_action.py  plugin_constants.py  plugin_info.py  plugin_state.py
src/dataclasses/: BaseInfo.py  __init__.py  info.py
src/discovery/: __init__.py  module_path_finder.py
src/domain/: __init__.py  plugin.py  plugin_action.py  plugin_constants.py  plugin_info.py  plugin_state.py
src/interfaces/: __init__.py  finder.py  plugin.py  plugin_loader.py  plugin_storage.py  validator.py
src/lifecycle/: __init__.py  (+5 more)
tests/: test_factory.py  test_finder.py  test_importer.py  test_loader.py  test_storage.py
(+119 files in other folders)
