[project]
name = "plugin-factory"
version = "0.1.0"
autor = [
    { name = "Yaroslav Volkotrub", email = "at2tzik@gmail.com"}
]
readme="README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true

[tool.black]
line-length=79
